RESOLVED FIXED207388
[Win] Two FileSystem API tests fail
https://bugs.webkit.org/show_bug.cgi?id=207388
Summary [Win] Two FileSystem API tests fail
Stephan Szabo
Reported 2020-02-07 09:34:08 PST
FileSystemTest.UnicodeDirectoryName fails because directoryName takes off \ but not / from the ends of paths causing a mismatch with the expected result. As PathFindFileName appears to stop at either, we probably should remove either from the end. FileSystemTest.GetFileMetadataSymlink has two issues. * First, creating a symlink appears to be returning the wrong truth value for success because CreateSymbolicLinkW returns zero on failure and non-zero on success (https://docs.microsoft.com/en-us/windows/win32/api/winbase/nf-winbase-createsymboliclinkw). * Second, GetFinalPathNameByHandleW with VOLUME_NAME_NT appears to return a path that FindFirstFileW fails to open (I get paths starting with something like "\Device\HarddiskVolume6\").
Attachments
Patch (2.46 KB, patch)
2020-02-07 09:46 PST, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-02-07 09:46:38 PST
WebKit Commit Bot
Comment 2 2020-02-07 14:29:22 PST
Comment on attachment 390092 [details] Patch Clearing flags on attachment: 390092 Committed r256063: <https://trac.webkit.org/changeset/256063>
WebKit Commit Bot
Comment 3 2020-02-07 14:29:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-02-07 14:30:19 PST
Note You need to log in before you can comment on or make changes to this bug.