[Win] Two FileSystem API tests fail https://bugs.webkit.org/show_bug.cgi?id=207388

Reviewed by Don Olmstead.

* wtf/win/FileSystemWin.cpp:
Make getFinalPathName return dos path rather than nt volume path.
Change createSymbolicLink return to match CreateSymbolicLinkW
Have directoryName strip trailing slashes.


Canonical link: https://commits.webkit.org/220406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256063 268f45cc-cd09-0410-ab3c-d52691b4dbfc